--- a/r11.yaml
+++ b/r11.yaml
@@ -10,7 +10,7 @@ resolution: |
     replaced or renewed March 2010
     
 motion: email
-vote_record: |
+vote_record:
     - name: JD
       proposer: yes
       vote: 1
