--- a/r18.yaml
+++ b/r18.yaml
@@ -15,7 +15,7 @@ resolution: |
     Dunstan's term
     
 motion: email
-vote_record: |
+vote_record:
     - name: JD
       proposer: yes
       vote: 1
