--- a/r23.yaml
+++ b/r23.yaml
@@ -12,7 +12,7 @@ resolution: |
     
     1. It shall appoint Jonathan S. Katz as a new board member
 motion: email
-vote_record: |
+vote_record:
     - name: MW
       vote: 1
       date: 2013-02-28
