--- a/r24.yaml
+++ b/r24.yaml
@@ -13,7 +13,7 @@ resolution: |
     1. It shall appoint Jim Mlodgeski as a new board member
     
 motion: email
-vote_record: |
+vote_record:
     - name: MW
       vote: 1
       date: 2013-02-28
