--- a/r25.yaml
+++ b/r25.yaml
@@ -30,7 +30,7 @@ resolution: |
     
     7. The authorized contact of SeaPUG shall be Lloyd Albin
 motion: email
-vote_record: |
+vote_record:
     - name: MAB
       vote: 1
       date: 2012-03-13
