--- a/r26.yaml
+++ b/r26.yaml
@@ -31,7 +31,7 @@ resolution: |
     6. The authorized contact of PDXPUG shall be Gabrielle Roth.
     
 motion: email
-vote_record: |
+vote_record:
     - name: JD
       vote: 1
       date: 2013-04-24
