--- a/r27.yaml
+++ b/r27.yaml
@@ -11,7 +11,7 @@ resolution: |
     
     1. It shall appoint Mark Wong as new Treasurer
 motion: email
-vote_record: |
+vote_record:
     - name: MB
       vote: 1
       date: 2011-09-09
