--- a/r32.yaml
+++ b/r32.yaml
@@ -30,7 +30,7 @@ resolution: |
     
     7. The authorized contacts of DFW PUG shall be Kirk Roybal and Taha Kadado
 motion: email
-vote_record: |
+vote_record:
     - name: MAB
       vote: 1
       date: 2014-09-22
