--- a/r37.yaml
+++ b/r37.yaml
@@ -8,7 +8,7 @@ resolution: |
     To spend $750 for a new page design for the websites by 99 designs and the
     winner will be determined by the majority vote of the board
 motion: voice
-vote_record: |
+vote_record:
     - name: JD
       vote: 1
     - name: MW
