--- a/r42.yaml
+++ b/r42.yaml
@@ -17,7 +17,7 @@ resolution: |
     
     4. The President of the corporation shall create a Committee of the Board for management of the scholarships including person eligibility, guidelines and eligible conferences.
 motion: email
-vote_record: |
+vote_record:
     - name: JM
       vote: 1
       date: 2015-08-27
