--- a/r45.yaml
+++ b/r45.yaml
@@ -29,7 +29,7 @@ resolution: |
     
     7. The authorized contacts of Austin PUG shall be Debra Cerda (Debra.Cerda@bluetreble.com) 
 motion: email
-vote_record: |
+vote_record:
     - name: JSK
       vote: 1
       date: 2016-05-09
