--- a/r54.yaml
+++ b/r54.yaml
@@ -12,7 +12,7 @@ resolution: |
     
      1. It shall appoint Mark Wong as interim President replacing Robert Treat.
 motion: voice
-vote_record: |
+vote_record:
     - name: JD
       vote: 1
     - name: KP
