--- a/r75.yaml
+++ b/r75.yaml
@@ -22,6 +22,6 @@ resolution: |
      	A. The current Associated Project Liaison
      	B. The steering committee per the published governance document of --
 motion: voice
-vote_record: |
+vote_record:
     - name: JD
       proposer: yes
