--- a/r10.yaml
+++ b/r10.yaml
@@ -36,7 +36,7 @@ resolution: |
     same people).
     
 motion: email
-vote_record: |
+vote_record:
     - name: JD
       proposer: yes
       vote: 1
