--- a/r21.yaml
+++ b/r21.yaml
@@ -30,7 +30,7 @@ resolution: |
     
     6. The authorized contact of NYCPUG shall be Jonathan S. Katz
 motion: email
-vote_record: |
+vote_record:
     - name: MAB
       vote: 1
       date: 2012-12-19
