--- a/r22.yaml
+++ b/r22.yaml
@@ -30,7 +30,7 @@ resolution: |
     
     6. The authorized contact of PhillyPUG shall be Jim Mlodgenski
 motion: email
-vote_record: |
+vote_record:
     - name: MAB
       vote: 1
       date: 2012-12-20
