--- a/r29.yaml
+++ b/r29.yaml
@@ -26,7 +26,7 @@ resolution: |
     Jonathan Katz
     Jim Mlodgenski
 motion: email
-vote_record: |
+vote_record:
     - name: BM
       vote: 1
       date: 2014-08-27
