--- a/r33.yaml
+++ b/r33.yaml
@@ -15,7 +15,7 @@ resolution: |
     2. Decisions by the committee shall be reached via a simple majority vote.
     3. The committee shall maintain at least 3 members
 motion: email
-vote_record: |
+vote_record:
     - name: JD
       proposer: yes
       vote: 1
