--- a/r4.yaml
+++ b/r4.yaml
@@ -7,7 +7,7 @@ resolution: |
     
     75.00 for professional
     20.00 for student
-vote_record: |
+vote_record:
     - name: Selena Deckelmann
       vote: 1
     - name: Joshua D. Drake
