--- a/r46.yaml
+++ b/r46.yaml
@@ -31,7 +31,7 @@ resolution: |
     
     7. The authorized contacts of PostgresOpen shall be Kris Pennella
        (kris@postgresql.us) and Stephen Frost (sfrost@snowman.net)
-vote_record: |
+vote_record:
     - name: KP
       proposer: yes
     - name: MAB
