--- a/r55.yaml
+++ b/r55.yaml
@@ -26,7 +26,7 @@ resolution: |
        Project financially. This assistance will be from the United States PostgreSQL
        general fund and not the Associated Project ledger.
 motion: voice
-vote_record: |
+vote_record:
     - name: JD
       vote: 1
     - name: KP
