--- a/r61.yaml
+++ b/r61.yaml
@@ -35,7 +35,7 @@ resolution: |
     	B. The steering committee of the project
     	C. A new liaison with documentation of their new position within the project
 motion: email
-vote_record: |
+vote_record:
     - name: JD
     - name: MW
     - name: KP
