--- a/r73.yaml
+++ b/r73.yaml
@@ -27,7 +27,7 @@ resolution: |
      	A. The current liaison
      	B. The steering committee per the published governance document of the project
 motion: voice
-vote_record: |
+vote_record:
     - name: KP
       vote: 1
     - name: JD
