--- a/r48.yaml
+++ b/r48.yaml
@@ -104,3 +104,9 @@ motion: email
 vote_record:
     - name: JD
       proposer: yes
+    - name: JM
+    - name: JSK
+    - name: KP
+    - name: MAB
+    - name: MW
+    - name: RT
