--- a/r75.yaml
+++ b/r75.yaml
@@ -1,7 +1,7 @@
 title: Associated Project Autonomy (Rev 2)
 resolution_date: 2016-12-09T00:00:00
 action_date: 2016-12-09T00:00:00
-action: Approved
+action: Pending
 resolution: |
     WHEREAS:
     
