--- a/doc/r76.yaml
+++ b/doc/r76.yaml
@@ -1,9 +1,9 @@
-title: Joshua Drake to released postgresql.us domain to PGUS's AWS account
+title: Joshua Drake to release postgresql.us domain to PGUS's AWS account
 resolution_date: 2016-12-09T00:00:00
 action_date: 2016-12-09T00:00:00
 action: Approved
 resolution: |
-    Joshua Drake to released postgresql.us domain to PGUS's AWS account
+    Joshua Drake to release postgresql.us domain to PGUS's AWS account
 motion: voice
 vote_record:
     - name: JD
