--- a/doc/r3.yaml
+++ b/doc/r3.yaml
@@ -1,4 +1,4 @@
-title: 
+title: Tabling the membership benefits
 resolution_date: 2008-04-29T00:00:00
 action_date: 2008-04-29T00:00:00
 action: Approved
