Update resolutions made in 2017-11-01 meeting

--- a/doc/r95.yaml
+++ b/doc/r95.yaml
@@ -14,3 +14,18 @@ resolution: |
 
 motion: voice
 vote_record:
+    - name: SF
+      vote: 1
+    - name: DC
+      vote: 1
+    - name: MW
+      proposer: yes
+      vote: 1
+    - name: JM
+      vote: 1
+    - name: JSK
+      vote: 1
+    - name: JC
+      vote: 1
+    - name: MB
+      vote: 1
